# REFUTE

./: .gitignore  README.md  pyproject.toml
refute/: eval.py  generate_preds.py
refute/prompt_templates/: few_shot_human.txt  few_shot_system.txt  randsearch_human.txt  randsearch_oracle_human.txt  randsearch_oracle_system.txt  randsearch_system.txt  reasoning_few_shot_system.txt  reasoning_randsearch_oracle_system.txt  reasoning_randsearch_system.txt  zero_shot_oracle_human.txt  zero_shot_oracle_system.txt  zero_shot_system.txt
refute/utils/: checker.py  code_exec.py  dataset_parser.py  get_dataset.py  get_model_client.py  logging_config.py  models.py  stress.bat  xml_parser.py
